--- a/Section-4_EncryptionCrashCourse/01.md
+++ b/Section-4_EncryptionCrashCourse/01.md
@@ -77,3 +77,26 @@ Symmetric:
 2048 - bit RSA keys are equivalent in strength to 112-bit symmetric keys
 3072 - bit RSA keys are equivalent in strength to 128-bit symmetric keys
 15360 - bit RSA keys are equivalent in strength to 256-bit symmetric keys
+
+
+
+PGP
+Bit Locker
+True Crypt
+TLS
+
+Encrypto
+
+
+If sender encrypts the data using receiver's public key
+and 
+receiver decrypts the data using receiver's private key
+
+This ensures confidentiality but not authentication
+
+
+If sender encrypts the data using its own private key
+and
+receiver decrypts the data using sender's public key
+
+This ensures authentication but not confidentiality
