--- a/Section-4_EncryptionCrashCourse/01.md
+++ b/Section-4_EncryptionCrashCourse/01.md
@@ -79,6 +79,11 @@ Symmetric:
 15360 - bit RSA keys are equivalent in strength to 256-bit symmetric keys
 
 
+BRUTE FORCE ATTACK
+DICTIONARY ATTACK
+BOTH
+
+
 
 PGP
 Bit Locker
