--- a/Section-4_EncryptionCrashCourse/03.md
+++ b/Section-4_EncryptionCrashCourse/03.md
@@ -28,5 +28,32 @@ https://weakdh.org/sysadmin.html
 https://www.grc.com/miscfiles/SChannel_Cipher_Suites.txt
 
 
+These are cryptographic protocols, designed to provide communication security over a network
+
+SSL is the older encryption protocol
+TLS is new , but people still call them SSL
+It is sometimes misleading
+Many sites still use SSL due to compatibility even though it has security issues.
+
+
+TLS is used when you see HTTPS
+but TLS can be used with any other protocols
+TLS is very important for internet security and privacy, because it is most used method for encryption on internet
+
+TLS provides privacy because it encrypts the data and data integrity,
+because it used message authentication codes or MACs when communicating between two applications
+
+
+TLS provides E2E encryption
+
+TLS provides security services like confidentiality or privacy, authentication and integrity
+
+The connection is private because a symmetric algorithm like AES is used to encrypt the data transmitted
+
+The negotiation of a shared secret between the client and the server at the session initiation cannot be read by eavesdroppers even by an attacker who places himself in the middle of the connection
+
+
+The connection is also reliable in that, no attacker can modify the connection during negotiation without being detected
+
 
 
