--- a/Section-4_EncryptionCrashCourse/04.md
+++ b/Section-4_EncryptionCrashCourse/04.md
@@ -4,6 +4,17 @@ SSL Stripping is a cyberattack technique used to downgrade a secure HTTPS connec
 
 
 
+An attacker that can position themselves in the middle between the source and the destination of traffic, source being browser and destination being web server, can perform man in the middle attacks. One such attack that required pretty minimal skill is called ssl stripping
+
+Changes encrypted HTTPS to HTTP connections
+
+
+
+
+ARP spoofing (or poisoning) in cybersecurity involves tricking devices on a Local Area Network (LAN) by sending falsified Address Resolution Protocol (ARP) messages, linking an attacker's MAC address to a legitimate IP address, allowing them to intercept, steal, or redirect traffic, often as a Man-in-the-Middle (MitM) attack to gain credentials or install malware, exploiting ARP's inherent lack of authentication for devices. It's a major threat on IPv4 networks, but solutions include static ARP entries, packet filtering, VPNs, and monitoring tools like Wireshark or Arpwatch. 
+
+
+
 
 https://www.irongeek.com/i.php?page=security/AQuickIntrotoSniffers
 
