--- a/Section-6_OperatingSystemsSecurity/01.md
+++ b/Section-6_OperatingSystemsSecurity/01.md
@@ -1,27 +1,21 @@
-Operating Systems - Security Features
+Operating systems serve as the critical interface between users, applications, and hardware, and their security architecture is designed to protect each of these layers. In 2026, the security landscape for desktop and mobile systems remains defined by the tug-of-war between open flexibility and closed control.
 
+Desktop Operating Systems: Windows, macOS, and Linux
+The security of a desktop operating system is often judged by its architecture and the size of its "attack surface." Windows remains the most targeted operating system globally due to its massive market share. To counter this, it utilizes features like Windows Defender for real-time threat detection and BitLocker for full-disk encryption. While Microsoft has made significant strides in hardening the system, its vast compatibility with older hardware and software can sometimes create legacy vulnerabilities that attackers exploit.
 
-User
-Application
-Operating Systems
-Hardware
+In contrast, macOS is often viewed as a "walled garden." Apple’s strategy relies on tight vertical integration where they control both the hardware and the software. Key features like Gatekeeper ensure that only verified software can be installed, while System Integrity Protection (SIP) prevents even administrative users from modifying critical system files. Although some perceive it as having fewer features than a highly customized Linux setup, its "secure by default" nature makes it very resilient for the average user.
 
+Linux is widely considered the most security-focused option for power users and administrators. Its open-source nature allows a global community to audit the source code and patch vulnerabilities rapidly. Linux security is built on the Principle of Least Privilege, where users operate with minimal permissions by default. Advanced tools like SELinux (Security-Enhanced Linux) or AppArmor provide mandatory access controls that can lock down a system much more granularly than Windows or Mac. However, because Linux gives the user total control, a lack of expertise can lead to misconfigurations that negate its inherent security advantages.
 
-When we consider
-Windows, Mac , Linux
+Mobile Operating Systems: iOS vs. Android
+The mobile development world is dominated by iOS and Android, each approaching security from a different philosophy. iOS is the leader in consistent security deployment because Apple pushes updates to all compatible devices simultaneously. This eliminates the "fragmentation" issue where older devices remain unpatched. iOS also uses a "Secure Enclave"—a dedicated hardware chip that handles biometric data and encryption keys separately from the main processor—to ensure that even a compromised system cannot easily access sensitive credentials.
 
-Mac has the least security features
-Linux is security focused
+Android, developed by Google, has historically been more open, allowing for app sideloading and third-party stores. While this flexibility is a hallmark of the platform, it increases the risk of malware. To combat this, Google has implemented "Google Play Protect," which scans billions of apps daily for malicious behavior. Recent versions of Android have narrowed the security gap with iOS by introducing granular app permissions and improved sandboxing, which isolates apps from each other to prevent data theft. However, because many different manufacturers (like Samsung or Xiaomi) use Android, security updates can sometimes be delayed as they pass through various company testing phases.
 
+Security Bugs and Vulnerabilities
+Vulnerabilities typically stem from programming errors or design flaws that attackers can exploit to gain unauthorized access. One common bug is the Buffer Overflow, where a program writes more data to a memory buffer than it can hold, allowing an attacker to overwrite adjacent memory and execute malicious code. Privilege Escalation is another critical threat, where a user or application with limited rights finds a flaw that allows them to gain "root" or administrative access, effectively taking over the entire system.
 
-
-But when it comes to Mobile
-Android from google
-IOS from apple are there
-
-IOS is leading in security in mobile development
-Android constantly improves its security
-
+Modern operating systems also face "Zero-Day" vulnerabilities, which are flaws unknown to the developers that are exploited before a patch can be created. To mitigate these risks, developers use techniques like Sandboxing (running apps in a restricted environment) and Code Signing (ensuring software hasn't been tampered with). Despite these features, the "human factor" remains the biggest vulnerability, as social engineering or poor password hygiene can often bypass even the most advanced technical safeguards.
 
 #########################################################################
 
